--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "houser",
   "version": "0.1.0",
+  "main": "server/index.js",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "massive": "^5.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
